# KDEToolbox

./: .gitignore  CHANGELOG.md  LICENSE  README.md  kde-toolbox.desktop  main.py  pyproject.toml
.github/workflows/: ci.yml
kde_toolbox/: main.py
kde_toolbox/core/: config.py  memory_monitor.py  scheduler.py
kde_toolbox/kde/: service.py
kde_toolbox/ui/: main_window.py  tray_icon.py
